New geo tab panel in query

--- a/src/main/webapp/WEB-INF/zul/query/requestSearchField.zul
+++ b/src/main/webapp/WEB-INF/zul/query/requestSearchField.zul
@@ -23,6 +23,7 @@
 		<tab id="tabSnippet" label="Snippet fields" />
 		<tab id="tabSort" label="Sorted fields" />
 		<tab id="tabFilter" label="Filters" />
+		<tab id="tabGeo" label="Geo" />
 		<tab id="tabCollapsing" label="Collapsing" />
 		<tab id="tabBoostQueries" label="Boosting queries" />
 		<tab id="tabScoreFunction" label="Scoring" />
@@ -49,6 +50,9 @@
 		</tabpanel>
 		<tabpanel fulfill="tabFilter.onSelect">
 			<include src="WEB-INF/zul/query/search/filters.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabGeo.onSelect">
+			<include src="WEB-INF/zul/query/search/geo.zul" />
 		</tabpanel>
 		<tabpanel fulfill="tabCollapsing.onSelect">
 			<include src="WEB-INF/zul/query/search/collapsing.zul" />
