--- a/src/main/webapp/WEB-INF/zul/query/search/collapsing.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/collapsing.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -81,7 +81,7 @@
 						</auxheader>
 						<auxheader>
 							<listbox mold="select"
-								model="@load(collapse.indexedFields)"
+								model="@load(collapse.functionFields)"
 								selectedItem="@bind(collapse.functionField.field)">
 								<template name="model">
 									<listitem label="@load(each)" />
