--- a/src/main/webapp/WEB-INF/zul/query/search/join.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/join.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2012-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -70,6 +70,16 @@
 					</listbox>
 				</vbox>
 			</listheader>
+			<listheader label="Type" hflex="min">
+				<vbox>
+					<listbox selectedItem="@bind(joins.current.type)"
+						mold="select" model="@load	(joins.typeList)">
+						<template name="model">
+							<listitem label="@load(each.label)" />
+						</template>
+					</listbox>
+				</vbox>
+			</listheader>
 			<listheader label="Return fields" hflex="min">
 				<vbox>
 					<checkbox
@@ -107,6 +117,7 @@
 				<listcell label="@load(join.queryString)" />
 				<listcell label="@load(join.localField)" />
 				<listcell label="@load(join.foreignField)" />
+				<listcell label="@load(join.type.label)" />
 				<listcell label="@load(join.returnFields)" />
 				<listcell label="@load(join.returnScores)" />
 				<listcell label="@load(join.returnFacets)" />
