--- a/src/main/webapp/WEB-INF/zul/crawler/file/crawlfile.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/file/crawlfile.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -42,6 +42,11 @@
 								</template>
 							</listbox>
 						</cell>
+					</row>
+					<row>
+						<label value="Indexation buffer" />
+						<intbox
+							value="@bind(crawlFileProcess.properties.indexDocumentBufferSize.value)" />
 					</row>
 					<row>
 						<textbox readonly="true"
