Fix Property 'databaseCrawl' not found on type com.jaeksoft.searchlib.crawler.rest.RestCrawlThread

--- a/src/main/webapp/WEB-INF/zul/crawler/rest/process.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/rest/process.zul
@@ -36,7 +36,7 @@
 				<template name="model" var="thread">
 					<listitem>
 						<listcell
-							label="@load(thread.databaseCrawl.name)" />
+							label="@load(thread.restCrawlItem.name)" />
 						<listcell label="@load(thread.statusInfo)" />
 						<listcell
 							label="@load(thread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
