the learner is now able to return the original document. - Similar return the document. - Classify return the document with the highest score

--- a/src/main/webapp/WEB-INF/zul/learner/edit.zul
+++ b/src/main/webapp/WEB-INF/zul/learner/edit.zul
@@ -89,6 +89,11 @@
 					</cell>
 				</row>
 				<row>
+					<label value="Return source document: " />
+					<checkbox label="enabled"
+						checked="@bind(learning.currentLearner.returnSourceDocument)" />
+				</row>
+				<row>
 					<label value="Target Field map" />
 					<cell>
 						<hbox align="center">
